Fix docker compose 'permission denied' error

--- a/roles/docker/tasks/ubuntu.yml
+++ b/roles/docker/tasks/ubuntu.yml
@@ -8,8 +8,6 @@
     - docker
     - packages
 
-
-
 - name: Add Docker apt key.
   apt_key:
     url: "{{ apt_key_url }}"
@@ -36,12 +34,6 @@
     name: "{{ docker }}"
     state: present
 
-- name: Install docker-compose
-  get_url:
-    url : https://github.com/docker/compose/releases/download/v2.2.3/docker-compose-Linux-x86_64
-    dest: /usr/local/bin/docker-compose
-    mode: "u+x,g+x"
-
 - name: Add user(s) to docker group
   user:
     name: "{{ item }}"
@@ -50,10 +42,9 @@
   loop: "{{ docker_users }}"
   notify: Reload_docker
 
-- name: restart docker
-  systemd:
-    state: restarted
-    name: docker
-
-- name: Create symlink
-  file: src=/usr/local/bin/docker-compose dest=/usr/bin/docker-compose state=link
+- name: Install docker-compose
+  get_url:
+    url : https://github.com/docker/compose/releases/download/v2.2.3/docker-compose-Linux-x86_64
+    dest: /usr/local/bin/docker-compose
+    mode: 'o=x'
+  notify: Reload_docker
