--- a/roles/docker/tasks/ubuntu.yml
+++ b/roles/docker/tasks/ubuntu.yml
@@ -40,11 +40,15 @@
     groups: docker
     append: true
   loop: "{{ docker_users }}"
-  notify: Reload_docker
 
 - name: Install docker-compose
   get_url:
-    url : https://github.com/docker/compose/releases/download/v2.2.3/docker-compose-Linux-x86_64
-    dest: /usr/local/bin/docker-compose
-    mode: 'o=x'
+    url : https://github.com/docker/compose/releases/download/v{{ docker_compose_version }}/docker-compose-Linux-x86_64
+    dest: "{{ docker_compose_binary_path }}"
   notify: Reload_docker
+
+- name: Chmod docker_compose binary permissions
+  ansible.builtin.file:
+    path: "{{ docker_compose_binary_path }}"
+    group: docker
+    mode: '0755'
