--- a/roles/netflix/defaults/main.yml
+++ b/roles/netflix/defaults/main.yml
@@ -1,28 +1,10 @@
-docker_package_to_remove:
-  - docker
-  - docker-engine
-  - docker.io
-  - containerd
-  - runc
-
-docker_dependencies:
-  - ca-certificates
-  - curl
-  - gnupg
-  - lsb-release
-
-apt_key_url: https://download.docker.com/linux/ubuntu/gpg
-
-apt_key_id: 9DC858229FC7DD38854AE2D88D81803C0EBFCD88
-
-docker:
-  - docker-ce
-  - docker-ce-cli
-  - containerd.io
-
 docker_users:
   - ubuntu
 
-docker_compose_binary_path: /usr/local/bin/docker-compose
+timezone: Europe/Paris
 
-docker_compose_version: 2.2.3
+main_storage_path: /mnt/Western Digital
+
+containers_path: /home/souhib/Containers
+
+domain_name: souhib-trabelsi.com
