--- a/roles/netflix/tasks/main.yml
+++ b/roles/netflix/tasks/main.yml
@@ -1,3 +1,3 @@
 ---
-#- include_tasks: ubuntu.yml
-#  when: ansible_distribution == 'Ubuntu'
+- include_tasks: ubuntu.yml
+  when: ansible_distribution == 'Ubuntu'
